# Waves

./: .gitignore  CMakeLists.txt  README.md  SpeedTable.xlsx  main.cpp
cpp/: CMakeLists.txt  main.cpp
cpp/src/Comms/: IConnectable.h  JsonSerialization.cpp  JsonSerialization.h  WavesStatusMessage.h
cpp/src/Comms/Json/: JsonSerialization.cpp  JsonSerialization.h
cpp/src/Comms/RabbitMQ/: RabbitClient.cpp  RabbitClient.h  RabbitPublisher.cpp  RabbitPublisher.h  RabbitSubscriber.cpp  RabbitSubscriber.h
cpp/src/Control/: CommandManager.cpp  CommandManager.h  CommandProcessor.h  CommandProcessorBase.h
cpp/src/Log/: DataLogger.cpp  DataLogger.h  LogHeaderIndex.h
cpp/src/Model/Base/: Orientation.h  Point2D.h  Point3D.h  TimePoint.h  Vector2D.h
cpp/src/Model/Command/: CommandBase.h  LoadMissionCommand.h  ManeuverCommand.h  RunMissionCommand.h  StopCommand.h  StopMissionCommand.h
cpp/src/Model/Maneuver/: DriveToManeuver.h  ManeuverBase.h  ManeuverCompletionCriteria.h  ManeuverControlsState.h  ManeuverGoalsState.h  ManeuverState.h  ParkManeuver.h  PhysicalState.h  PrimitiveManeuver.h
cpp/src/Model/Misc/: BatteryState.h
cpp/src/Model/Mission/: Mission.h  MissionExecutionState.h  MissionState.h  MissionStatus.h  NavigationStatus.h  Waypoint.h
cpp/src/Model/Navigation/: PhysicalState.h
cpp/src/Model/Report/: WavesStatusReport.h
cpp/src/Pilot/: Pilot.cpp
cpp/src/Pilot/Fuel/: BatteryManager.cpp
cpp/src/Pilot/Maneuver/: DriveSettings.h  ManeuverWrapper.h  PidController.h
cpp/src/Pilot/Mission/: MissionEngine.cpp  MissionEngine.h  MissionRepo.h
cpp/src/Sim/: Display.cpp  Display.h  Physics.cpp  Physics.h  SimplePhysics.cpp  SimplePhysics.h  _physics_readme.txt
cpp/src/Util/: FormatUtils.h  GenericUtils.h  MathUtils.cpp  MathUtils.h
cpp/src/Util/Thread/: ConcurrentQueue.h
cpp/src/Vehicle/: Pilot.h  VehicleMain.cpp  VehicleMain.h
cpp/src/Vehicle/Fuel/: BatteryManager.h
cpp/src/Vehicle/Maneuver/: ManeuverController.cpp  ManeuverController.h  ManeuverEngine.cpp  ManeuverEngine.h  ManeuverSettings.h  PidController.cpp  PidOutput.h
cpp/src/Vehicle/Maneuver/Pid/: PidCalculator.cpp
cpp/src/Vehicle/Mission/: MissionController.cpp  MissionController.h  MissionEngine.cpp  MissionRepo.cpp  MissionRepo.h
python/WavesDisplay/: main.py  pubExample.py  pyproject.toml  subExample.py
python/WavesDisplay/comms/: comms_factory.py  data_cache.py  rabbit_client.py  rabbit_publisher.py  rabbit_subscriber.py  waves_status_message.py
python/WavesDisplay/control/: vehicle_controller.py
python/WavesDisplay/display/: real_time_display.py
python/WavesDisplay/model/: _naming_convention.txt
python/WavesDisplay/model/base/: orientation.py  point2D.py  point3D.py  vector2D.py  vector3D.py
python/WavesDisplay/model/command/: command_base.py  load_mission_command.py  maneuver_command.py  run_mission_command.py  stop_command.py
python/WavesDisplay/model/maneuver/: drive_to_maneuver.py  maneuver_base.py  maneuver_completion_criteria.py  maneuver_control_state.py  maneuver_controls.py  maneuver_controls_state.py  maneuver_goals_state.py  maneuver_state.py  park_maneuver.py  physical_state.py  primitive_maneuver.py
python/WavesDisplay/model/misc/: battery_state.py
python/WavesDisplay/model/mission/: mission.py  mission_execution_state.py  mission_state.py  mission_status.py  navigation_status.py  waypoint.py
python/WavesDisplay/model/report/: waves_status_report.py
python/WavesDisplay/view/: main_window.py  real_time_display.py  real_time_view.py  style.qss  vehicle_control.py  vehicle_control_view.py
src/Model/Base/: Angle.h  Point2D.h  Vector3D.h
src/Model/Maneuver/: ManeuverControls.h  ManeuverState.h
src/Model/Mission/: NavigationStatus.h
src/Sim/: Display.cpp  Physics.cpp  Physics.h
src/Util/: FrameTransformations.cpp  FrameTransformations.h  MathUtils.cpp  MathUtils.h  UnitConversion.cpp  UnitConversion.h
src/Vehicle/: VehicleMain.cpp  VehicleMain.h
src/Vehicle/Maneuver/: ManeuverController.cpp  ManeuverController.h  ManeuverSettings.h
src/Vehicle/Maneuver/Pid/: PidCalculator.cpp  PidCalculator.h  PidOutput.h  PidSettings.h
src/Vehicle/Mission/: MissionController.cpp
