[tool.poetry]
name = "wavesdisplay"
version = "0.1.0"
description = ""
authors = ["Peter <peterggirard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
